# ml-linear-regression-uni

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/  workflows/: ci.yml
.github/workflows/: ci.yml
scripts/: fit_and_plot.py  plot_cost_slice.py  train_gd.py
src/ml_linear_regression_uni/: __init__.py  linear.py
tests/: conftest.py  test_convergence.py  test_gradient_descent.py  test_least_squares.py  test_linear.py  test_model.py  test_plotting.py
